--- a/index.css
+++ b/index.css
@@ -1,3 +1,63 @@
+/* --------------- loading pages --------------- */
+/* === Loading Screen === */
+.loading-overlay {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  z-index: 9999;
+  transition: opacity 2s ease-in-out;
+  opacity: 1;
+}
+
+#loading-logo img {
+  width: 150px;
+  height: auto;
+  opacity: 0;
+  animation: flou 4s ease-in-out forwards;
+  border-radius: 20px;
+}
+
+#loading-text {
+  width: 0%;
+  background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%);
+  height: 20px;
+  animation: remplissage 4s ease-in-out forwards ;
+}
+/* === Contenu caché avant le chargement === */
+.le-contenu-main {
+  transition: opacity 2s ease-in-out;
+  opacity: 0;
+}
+.no-scroll {
+  overflow: hidden;
+}
+@keyframes remplissage {
+  0%{
+      width: 0%;
+  }
+  50%{
+      border-radius:5px;
+  }
+  100%{
+      width: 105%;
+      border-radius:5px;
+  }
+}
+@keyframes flou {
+  0%{
+      opacity: 0;
+  }
+  100%{
+      opacity: 1;
+  }
+}
+
+
+
 body {
     margin: 0;
     display: flex;
@@ -6,10 +66,16 @@ body {
     text-align: center;
     height: 100vh;
     justify-content: center;
-    background-image: url(image/bggame.jpg);
+    background-image: url(image/imgbg.jpg);
     background-size: cover;
     overflow: hidden;
   }
+
+.le-contenu-main h1{
+  position: absolute;
+  margin-top: 0px;
+}
+
   
   .image-container {
     position: relative;
@@ -42,10 +108,10 @@ body {
   
   .btn {
     position: absolute;
-    bottom: -80px;
     background-color: slateblue;
     color: white;
     border: none;
+    margin: 100px;
     padding: 10px 20px;
     border-radius: 5px;
     cursor: pointer;
